--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,7 @@
     <script defer=true src="{{ site.baseurl }}/assets/js/main.min.js"></script>
     
     <!-- CSS -->
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css">
 
     <!--Favicon-->
     <link rel="shortcut icon" href="{{ site.baseurl }}/{{ site.theme_settings.favicon }}" type="image/x-icon">
