--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -34,12 +34,12 @@
         {% if site.theme_settings.portfolio %}
         <li class="separator">
             |
-        </li>
-        <li>
-            <a class="clear" href="{{ site.url }}{{ site.baseurl }}/portfolio">
-                Portfolio
-            </a>
-        </li>
+  <! -- </li>     -- >
+  <! --      <li>     -- >
+  <! --          <a class="clear" href="{{ site.url }}{{ site.baseurl }}/portfolio">     -- >
+  <! --              Portfolio     -- >
+  <! --          </a>     -- >
+  <! --      </li>     -- >
         {% endif %}
         {% if site.theme_settings.search %}
         <li class="separator">
