--- a/_sass/includes/_navbar.scss
+++ b/_sass/includes/_navbar.scss
@@ -19,8 +19,8 @@
     }
 
     .avatar {
-        height: 3em;
-        width: 3em;
+        height: 5.5em;
+        width: 5em;
         float: left;
         margin-top: -13px;
         border-radius: 0.2em;
@@ -30,10 +30,10 @@
     }
 
     .site-title {
-        float: left;
+        float: center;
         font-weight: bold;
-        font-size: 1em;
-        line-height: 1.5;
+        font-size: 2em;
+        line-height: 0.5;
     }
 
     nav {
